added idea details